--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
     <title>Document</title>
     <link rel="stylesheet" href="styles/main.css">
     <link
@@ -23,7 +23,7 @@
         <h3>And find the perfect partner to fullfill it</h3>
         <button class="find-button">Find your holiday partner</button>
     </section>
-
+<main>
     <section class="section-2">
         <div class="second-block">
             <h3 class="second-block__text">How Dreamshare works?</h3>
@@ -102,7 +102,7 @@
 
     </section>
 
-
+</main>
     <footer class="footer">
         <hr>
         <h2>DREAMSHARE</h2>
