--- a/contacts.html
+++ b/contacts.html
@@ -28,14 +28,14 @@
             <img onclick="openlogoCont()" class="logo-img" src="Logo.png" alt="">
             <img onclick="ViewMenuCont()" class="button-navi" src="buttonNavi.png" alt="">
             <span class="head-number">+86 852 346 000</span>
-            <button class="reserv">Reservations</button>
+            <button onclick="setscrollBy()" class="reserv">Reservations</button>
 
            
 
 
         </div>
         <div class="main-text">
-            <h1>Get in Touch</h1>
+            <h1 >Get in Touch</h1>
             <h5 class="under-text">The freshest ingredients for you every day</h5>
         </div>
         <div class="maintime">
@@ -84,7 +84,7 @@
                 </a>
                 <img class="button-navi" src="buttonNavi.png" alt="">
                 <span class="head-number new-number">+86 852 346 000</span>
-                <button class="reserv">Reservations</button>
+                <button class="reserv ">Reservations</button>
             </div>
 
             <h2 class="coming"> Coming Soon</h2>
