--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
 
 
 
-        <div id="newMenuAbout">
-          <a href="about.html">  <img class="close-new" src="NaviClose.png" alt=""></a>
+        <div class="newMenuAbout">
+            <img class="close-new" src="NaviClose.png" alt="">
             <img class="newimg" src="Overlay.png" alt="">
             <a href="index.html">
                 <p class="span-menu1 span-menu">Home
@@ -58,11 +58,11 @@
 
         </div>
         
-    <div id="openLogoAbout">
+    <div class="openLogoAbout">
         <img class="img-logo" src="Overlaylogo.png" alt="">
         <div class="header">
-            <a href="index.html"><img class="logo-img new-logo" src="Logoвфкл.png" alt="">
-            </a>
+       <img class="logo-img new-logo" src="Logoвфкл.png" alt="">
+            
             <img class="button-navi" src="buttonNavi.png" alt="">
             <span class="head-number new-number">+86 852 346 000</span>
             <button class="reserv">Reservations</button>
