--- a/contacts.html
+++ b/contacts.html
@@ -51,7 +51,7 @@
 
 
         </div>
-         <div id="newMenuContact">
+         <div class="newMenuContact">
                 <img class="close-new" src="NaviClose.png" alt="">
                 <img class="newimg" src="Overlay.png" alt="">
                 <a href="index.html">
@@ -77,11 +77,10 @@
 
             </div>
             
-        <div id="openLogoMenu">
+        <div class="openLogoMenu">
             <img class="img-logo" src="Overlaylogo.png" alt="">
             <div class="header">
-                <a href="index.html"><img class="logo-img new-logo" src="Logoвфкл.png" alt="">
-                </a>
+              <img class="logo-img new-logo" src="Logoвфкл.png" alt="">
                 <img class="button-navi" src="buttonNavi.png" alt="">
                 <span class="head-number new-number">+86 852 346 000</span>
                 <button class="reserv ">Reservations</button>
