--- a/blogs.html
+++ b/blogs.html
@@ -29,8 +29,10 @@
         </div>
 
 
-        <div id="newMenuBlogs">
-          <a href="about.html">  <img class="close-new" src="NaviClose.png" alt=""></a>
+        <div class="newMenuBlogs">
+          <!-- <a href="about.html">   -->
+            <img class="close-new" src="NaviClose.png" alt="">
+        <!-- </a> -->
             <img class="newimg" src="Overlay.png" alt="">
             <a href="index.html">
                 <p class="span-menu1 span-menu">Home
@@ -55,11 +57,11 @@
 
         </div>
                  --> -->
-  <div id="openlogoBlog"> 
+  <div class="openlogoBlog"> 
        <img class="img-logo" src="Overlaylogo.png" alt="">
         <div class="header">
-            <a href="index.html"><img class="logo-img new-logo" src="Logoвфкл.png" alt="">
-            </a>
+            <img class="logo-img new-logo" src="Logoвфкл.png" alt="">
+            
             <img   class="button-navi" src="buttonNavi.png" alt="">
             <span class="head-number new-number">+86 852 346 000</span>
             <button class="reserv">Reservations</button>
