--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
 
 
-            <div id="openLogo">
-                <img class="img-logo" src="Overlaylogo.png" alt="">
+            <div class="openLogo">
+                <img class="img-logo img-logo-close" src="Overlaylogo.png" alt="">
                 <div class="header">
-                    <a  href="index.html"><img  class="logo-img new-logo" src="Logoвфкл.png" alt="">
-                    </a>
+                   <img  class="logo-img new-logo" src="Logoвфкл.png" alt="">
+                    
                     <img onclick="ViewMenu()" class="button-navi" src="buttonNavi.png" alt="">
                     <span class="head-number new-number">+86 852 346 000</span>
                     <button class="reserv">Reservations</button>
@@ -79,7 +79,7 @@
 
 
 
-            <div id="new">
+            <div class="new">
                 <img class="close-new" src="NaviClose.png" alt="">
                 <img class="newimg" src="Overlay.png" alt="">
               <a href="index.html"> <p class="span-menu1 span-menu">Home</p></a> 
