--- a/menu.html
+++ b/menu.html
@@ -34,11 +34,11 @@
         </div>
         <!-- Js blocks -->
 
-        <div id="openLogoMenu">
+        <div class="openLogoMenu">
             <img class="img-logo" src="Overlaylogo.png" alt="">
             <div class="header">
-                <a href="index.html"><img class="logo-img new-logo" src="Logoвфкл.png" alt="">
-                </a>
+                <img class="logo-img new-logo" src="Logoвфкл.png" alt="">
+                
                 <img class="button-navi" src="buttonNavi.png" alt="">
                 <span class="head-number new-number">+86 852 346 000</span>
                 <button class="reserv">Reservations</button>
@@ -76,7 +76,7 @@
 
 
 
-        <div id="newMenu">
+        <div class="newMenu">
             <img class="close-new" src="NaviClose.png" alt="">
             <img class="newimg" src="Overlay.png" alt="">
             <a href="index.html">
