--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     
                     <img onclick="ViewMenu()" class="button-navi" src="buttonNavi.png" alt="">
                     <span class="head-number new-number">+86 852 346 000</span>
-                    <button class="reserv">Reservations</button>
+                    <button class="reserv-new">Reservations</button>
                 </div>
 
                 <h2 class="coming"> Coming Soon</h2>
