--- a/blogs.html
+++ b/blogs.html
@@ -56,15 +56,14 @@
             </div>
 
         </div>
-                 --> -->
   <div class="openlogoBlog"> 
        <img class="img-logo" src="Overlaylogo.png" alt="">
         <div class="header">
             <img class="logo-img new-logo" src="Logoвфкл.png" alt="">
             
-            <img   class="button-navi" src="buttonNavi.png" alt="">
+            <img onclick="showBlog()"   class="button-navi new-button-navi" src="buttonNavi.png" alt="">
             <span class="head-number new-number">+86 852 346 000</span>
-            <button class="reserv">Reservations</button>
+            <button class="reserv reserv-new">Reservations</button>
         </div>
 
         <h2 class="coming"> Coming Soon</h2>
