--- a/contacts.html
+++ b/contacts.html
@@ -81,7 +81,7 @@
             <img class="img-logo" src="Overlaylogo.png" alt="">
             <div class="header">
               <img class="logo-img new-logo" src="Logoвфкл.png" alt="">
-                <img class="button-navi" src="buttonNavi.png" alt="">
+                <img onclick="showMenu2()" class="button-navi" src="buttonNavi.png" alt="">
                 <span class="head-number new-number">+86 852 346 000</span>
                 <button class="reserv ">Reservations</button>
             </div>
