--- a/menu.html
+++ b/menu.html
@@ -134,7 +134,7 @@
 
 
     <section class="section-3">
-        <h2 class="h2-s2">Mains</h2>
+        <h2 class="h2-s2 h2-s3">Mains</h2>
         <p class="p-s2">This is a section of your menu. Give your section a brief description</p>
         <div class="starter-text sect-3-st">
             <div class="starter-textes">
