--- a/menu.html
+++ b/menu.html
@@ -39,9 +39,9 @@
             <div class="header">
                 <img class="logo-img new-logo" src="Logoвфкл.png" alt="">
                 
-                <img onclick="showmenu()" class="button-navi" src="buttonNavi.png" alt="">
+                <img onclick="showmenu()" class="button-navi new-button-navi" src="buttonNavi.png" alt="">
                 <span class="head-number new-number">+86 852 346 000</span>
-                <button class="reserv">Reservations</button>
+                <button class="reserv reserv-new">Reservations</button>
             </div>
 
             <h2 class="coming"> Coming Soon</h2>
