--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             
             <img onclick="showAbout()" class="button-navi" src="buttonNavi.png" alt="">
             <span class="head-number new-number">+86 852 346 000</span>
-            <button class="reserv">Reservations</button>
+            <button class="reserv reserv-new">Reservations</button>
         </div>
 
         <h2 class="coming"> Coming Soon</h2>
@@ -142,12 +142,12 @@
 
 <img class="meat2" src="about.img/meat2.png" alt="">
 <div class="s4-2">
-<h2 class="meat1-h2">03.Bake</h2>
+<h2 class="meat1-h2 meat3-h2">03.Bake</h2>
 <p class="meat1-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus lorem id penatibus imperdiet.  </p>
 </div>
 <img class="meat3" src="about.img/meat3.png" alt="">
 <div class="s4-3">
-    <h2 class="meat1-h2">02.Pickled</h2>
+    <h2 class="meat1-h2 meat2-h2">02.Pickled</h2>
     <p class="meat1-p meat-p3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus lorem id penatibus imperdiet.  </p>
     </div>
 
